# comfy_nanobanana

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
src/comfy_nanobanana/: gemini_api.py  nodes.py
tests/: __init__.py  test_comfy_nanobanana.py
web/: index.js
web/node/: batch_images_dynamic.js  gemini_api_key_mask.js
